--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.0",
     "bootstrap-datepicker": "^1.10.0",
     "chart.js": "^3.1.1",
+    "chroma-js": "^2.4.2",
     "d3": "^7.8.5",
     "hls.js": "^1.4.9",
     "iconv-lite": "^0.6.3",
