--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bootstrap-datepicker": "^1.10.0",
     "chart.js": "^3.1.1",
     "chroma-js": "^2.4.2",
-    "d3": "^7.8.5",
+    "d3": "^7.9.0",
     "hls.js": "^1.4.9",
     "iconv-lite": "^0.6.3",
     "jquery": "^3.7.0",
@@ -44,6 +44,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~16.1.4",
     "@angular/compiler-cli": "~16.1.5",
+    "@types/chroma-js": "^2.4.4",
+    "@types/d3": "^7.4.3",
     "@types/d3-scale": "^4.0.3",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.16",
