--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "chart.js": "^3.1.1",
     "chroma-js": "^2.4.2",
     "d3": "^7.9.0",
+    "flag-icons": "^7.2.3",
+    "highcharts": "^11.4.1",
     "hls.js": "^1.4.9",
     "iconv-lite": "^0.6.3",
     "jquery": "^3.7.0",
