--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chart.js": "^3.1.1",
     "chroma-js": "^2.4.2",
     "d3": "^7.9.0",
+    "d3-hexbin": "^0.2.2",
     "flag-icons": "^7.2.3",
     "highcharts": "^11.4.1",
     "hls.js": "^1.4.9",
@@ -49,6 +50,7 @@
     "@angular/compiler-cli": "~16.1.5",
     "@types/chroma-js": "^2.4.4",
     "@types/d3": "^7.4.3",
+    "@types/d3-hexbin": "^0.2.5",
     "@types/d3-scale": "^4.0.3",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.16",
